Added Profile Pic Added PDF CV Sytling and Wording

--- a/MyMojo/Views/Home/Index.cshtml
+++ b/MyMojo/Views/Home/Index.cshtml
@@ -39,7 +39,7 @@
         </div><!--//item-->
 
         <div class="item">
-            <h3 class="level-title">SOLID &amp; Design Patterns</h3>
+            <h3 class="level-title">SOLIDD &amp; Design Patterns</h3>
             <div class="level-bar">
                 <div class="level-bar-inner" data-level="90%">
                     <span>6+ years</span>
@@ -67,7 +67,7 @@
         </div><!--//item-->
 
         <div class="item">
-            <h3 class="level-title">jQuery &amp; Javascript</h3>
+            <h3 class="level-title">jQuery &amp; JavaScript</h3>
             <div class="level-bar">
                 <div class="level-bar-inner" data-level="80%">
                     <span>4+ years</span>
@@ -94,7 +94,7 @@
         </div><!--//item-->
 
         <div class="item">
-            <h3 class="level-title">Managing</h3>
+            <h3 class="level-title">Managing &amp; Leading Teams</h3>
             <div class="level-bar">
                 <div class="level-bar-inner" data-level="90%">
                     <span>6+ years</span>
@@ -113,9 +113,6 @@
         <div class="meta">
             <div class="upper-row">
                 <h3 class="job-title">Development Manager</h3>
-                <div class="company-logo">
-                    <img src="~/Content/images/companies/fsl.png" />
-                </div>
                 <div class="time">May 2014 - Present</div>
             </div><!--//upper-row-->
             <div class="company">Financial Software Limited - London, UK</div>
@@ -332,16 +329,16 @@
         <p>Just a few side projects or open source libraries I have developed.</p>
     </div><!--//intro-->
     <div class="item wow">
-        <span class="project-title"><a href="http://foodie.st" target="_blank">Foodie.St (In Progress)</a></span> -
+        <span class="project-title"><a href="http://foodie.st" target="mymojo">Foodie.St (In Progress)</a></span> -
         <span class="project-tagline">A responsive website designed to locate and discover Food Trucks.  Writen with C#, MVC 5, CQRS/ES, MongoDB</span>
     </div><!--//item-->
 
     <div class="item wow">
-        <span class="project-title"><a href="https://itunes.apple.com/gb/app/motobays/id945467608?mt=8">MotoBays</a></span> - <span class="project-tagline">An iOS app allowing the user to find and navigate to free and paid Motorcycle Parking Bays in London.  Writen in Swift.</span>
+        <span class="project-title"><a href="https://itunes.apple.com/gb/app/motobays/id945467608?mt=8" target="mymojo">MotoBays</a></span> - <span class="project-tagline">An iOS app allowing the user to find and navigate to free and paid Motorcycle Parking Bays in London.  Writen in Swift.</span>
     </div><!--//item-->
 
     <div class="item wow">
-        <span class="project-title"><a href="https://itunes.apple.com/gb/app/cj-stats/id903673948?mt=8">CJ Stats</a></span> - <span class="project-tagline">An iOS app allowing the user to check their CJ Affiliate Publisher Stats. Writen in Objective C.</span>
+        <span class="project-title"><a href="https://itunes.apple.com/gb/app/cj-stats/id903673948?mt=8" target="mymojo">CJ Stats</a></span> - <span class="project-tagline">An iOS app allowing the user to check their CJ Affiliate Publisher Stats. Writen in Objective C.</span>
     </div><!--//item-->
 
 </section><!--//section-->
