--- a/MyMojo/Views/Shared/_Layout.cshtml
+++ b/MyMojo/Views/Shared/_Layout.cshtml
@@ -28,20 +28,20 @@
     <div class="wrapper">
         <div class="sidebar-wrapper">
             <div class="profile-container">
-                <img class="profile" src="~/Content/images/profile.jpg" alt="" />
+                <img class="profile" src="~/Content/images/profile.png" alt="" />
                 <h1 class="name">Chris Wallace</h1>
                 <h3 class="tagline">Senior .NET Developer</h3>
             </div><!--//profile-container-->
 
             <div class="contact-container container-block">
                 <ul class="list-unstyled contact-list">
-                    <li class="resume"><i class="fa fa-file-text"></i>@*<a href="~/Content/Chris Wallace - Curriculum Vitae.pdf">*@Curriculum Vitae@*</a>*@</li>
+                    <li class="resume"><i class="fa fa-file-text"></i><a href="~/Content/CV/Chris Wallace - Curriculum Vitae.pdf" target="mymojo">Curriculum Vitae</a></li>
                     <li class="email"><i class="fa fa-envelope"></i><a href="mailto: chris@mymojo.ca">chris@mymojo.ca</a></li>
                     <li class="phone"><i class="fa fa-phone"></i><a href="tel:07514816588">07514816588</a></li>
                     <li class="website"><i class="fa fa-globe"></i><a href="http://mymojo.ca">mymojo.ca</a></li>
                     <li class="address"><i class="fa fa-location-arrow"></i>London, UK</li>
-                    <li class="linkedin"><i class="fa fa-linkedin"></i><a href="http://www.linkedin.com/in/chris-wallace" target="_blank">chris-wallace</a></li>
-                    <li class="github"><i class="fa fa-github"></i><a href="https://github.com/wallaceiam" target="_blank">wallaceiam</a></li>
+                    <li class="linkedin"><i class="fa fa-linkedin"></i><a href="http://www.linkedin.com/in/chris-wallace" target="mymojo">chris-wallace</a></li>
+                    <li class="github"><i class="fa fa-github"></i><a href="https://github.com/wallaceiam" target="mymojo">wallaceiam</a></li>
                     
                     @*<li class="twitter"><i class="fa fa-twitter"></i><a href="https://twitter.com/wallaceiam" target="_blank">@@wallaceiam</a></li>*@
                 </ul>
