Added DDD.Light Project

--- a/MyMojo/Views/Home/Index.cshtml
+++ b/MyMojo/Views/Home/Index.cshtml
@@ -328,6 +328,11 @@
     <div class="intro wow">
         <p>Just a few side projects or open source libraries I have developed.</p>
     </div><!--//intro-->
+
+    <div class="item wow">
+        <span class="project-title"><a href="https://github.com/wallaceiam/DDD.Light" target="mymojo">DDD.Light (In Progress)</a></span> - <span class="project-tagline">A lightweight DDD, CQRS/ES frameworking targetting .NET 4.5, MongoDB and asynchronous processing.</span>
+    </div><!--//item-->
+
     <div class="item wow">
         <span class="project-title"><a href="http://foodie.st" target="mymojo">Foodie.St (In Progress)</a></span> -
         <span class="project-tagline">A responsive website designed to locate and discover Food Trucks.  Writen with C#, MVC 5, CQRS/ES, MongoDB</span>
@@ -340,5 +345,6 @@
     <div class="item wow">
         <span class="project-title"><a href="https://itunes.apple.com/gb/app/cj-stats/id903673948?mt=8" target="mymojo">CJ Stats</a></span> - <span class="project-tagline">An iOS app allowing the user to check their CJ Affiliate Publisher Stats. Writen in Objective C.</span>
     </div><!--//item-->
+
 
 </section><!--//section-->
