Added 70-480 Updated CQRS.Light

--- a/MyMojo/Views/Home/Index.cshtml
+++ b/MyMojo/Views/Home/Index.cshtml
@@ -330,7 +330,7 @@
     </div><!--//intro-->
 
     <div class="item wow">
-        <span class="project-title"><a href="https://github.com/wallaceiam/DDD.Light" target="mymojo">DDD.Light (In Progress)</a></span> - <span class="project-tagline">A lightweight DDD, CQRS/ES frameworking targetting .NET 4.5, MongoDB and asynchronous processing.</span>
+        <span class="project-title"><a href="https://github.com/wallaceiam/CQRS.Light" target="mymojo">CQRS.Light (In Progress)</a></span> - <span class="project-tagline">A lightweight DDD, CQRS/ES frameworking targetting .NET 4.5, MongoDB and asynchronous processing.</span>
     </div><!--//item-->
 
     <div class="item wow">
