--- a/MyMojo/Views/Shared/_Layout.cshtml
+++ b/MyMojo/Views/Shared/_Layout.cshtml
@@ -49,6 +49,11 @@
             <div class="education-container container-block">
                 <h2 class="container-block-title">Certifications</h2>
                 <div class="item">
+                    <h4 class="degree">Microsoft 70-480</h4>
+                    <h5 class="meta">Programming in HTML5 with JavaScript and CSS3</h5>
+                    <div class="time">2016</div>
+                </div><!--//item-->
+                <div class="item">
                     <h4 class="degree">Microsoft 70-315</h4>
                     <h5 class="meta">Developing and Implementing Web Applications with Microsoft Visual C# .NET and Microsoft Visual Studio .NET</h5>
                     <div class="time">2005</div>
